--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 
                 <!-- 只在提交状态显示 只在提交状态显示 只在提交状态显示 只在提交状态显示 -->
                 <div class="div_btn" id='div_support'>
-                        <a href="https://www.instagram.com/chongyen_ray/"><span>更多</span></a>
+                        <a href="https://crazyray0604.github.io/merrychristmas/"><span>Next</span></a>
                     </div>  
                 <!-- 只在提交状态显示 只在提交状态显示 只在提交状态显示 只在提交状态显示 -->
 
